# chief-ai-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notes/: INDEX.md
notes/real-estate/: README.md
notes/real-estate/deals/: _template.md
notes/real-estate/properties/: _template.md
notes/team-meetings/: README.md  _template.md
notes/team-meetings/one-on-ones/: _template.md
notes/tlp-ventures-projects/: README.md
notes/tlp-ventures-projects/active/: _template.md
notes/tlp-ventures-projects/ideas/: _template.md
src/chief_ai/: __init__.py  __main__.py  agent.py  cli.py  tools.py
tests/: test_agent.py
